--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Welcome to the official website of the 'Level Up - Sydney student International Film Festival'! This highly-anticipated, groundbreaking festival is set to make its debut in 2024."
+      content="Welcome to the official website of the 'Hong Kong Lights - International Film Festival'!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&display=swap" rel="stylesheet">
-    <title>Level Up - Sydney Student International Film Festival</title>
+    <title>Hong Kong Lights - International Film Festival</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Hong Kong Lights - International Film Festival</noscript>
     <div id="root"></div>
   </body>
 </html>
