--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/.png" />
+    <link rel="icon" href="images/myico.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Welcome to the official website of the ' Incube de Marseille Film Festival'!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/.png" />
+    <link rel="apple-touch-icon" href="images/myico.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
